# todoapi-project

./: .env.example  .gitignore  LICENSE  README.md  config.py  database.py  logger.py  pyproject.toml  requirements.txt
apps/: main.py
apps/celery_app/: __init__.py  app.py  celery_config.py  constants.py
apps/celery_app/mail_templates/: task_overdue.html  tfa_code.html  verify_account.html
apps/celery_app/tasks/: __init__.py  db_action_task.py
apps/celery_app/tasks/email/: tasks.py
apps/controllers/: MailController.py  PriorityController.py  RedisController.py  StatusController.py  TaskController.py  UserController.py  utils.py
apps/controllers/auth/: MiddleWare.py  UserAuth.py  utils.py
apps/models/body/: Priority.py  Status.py  Task.py  User.py
apps/models/db/: PriorityModel.py  StatusModel.py  TaskModel.py  UserModel.py  __init__.py  utils.py
apps/models/exceptions/: __init__.py  celery.py  query.py
apps/models/response/: auth.py  priority.py  status.py  task.py  user.py
apps/views/: AuthView.py  PriorityView.py  StatusView.py  TaskView.py  UserView.py
